fixed event handler

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <h1>Weather Dashboard</h1>
     </header>
 
-    <div class="form">
+    <form class="form">
         <label for="search">Search for City:</label><br>
         <span id="error"></span><br>
         <input type="text" name="city" id="city">
         <button class="btn" id="btn">GO</button>
-    </div>
+    </form>
 
     <aside class="previous">
         <!-- <ul style="list-style-type: none;"> -->
