local storage is kind or working

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link href='https://fonts.googleapis.com/css?family=Philosopher' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css" />
 
@@ -26,11 +24,11 @@
 
     <aside class="previous">
         <!-- <ul style="list-style-type: none;"> -->
-        <li class="list" id="0">search 1</li>
+        <!-- <li class="list" id="0">search 1</li>
         <li class="list" id="1">search 2</li>
         <li class="list" id="2">search 3</li>
         <li class="list" id="3">search 4</li>
-        <li class="list" id="4">search 5</li>
+        <li class="list" id="4">search 5</li> -->
         <!-- </ul> -->
     </aside>
 
