last city searc on reload working

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="container">
-        <div class="forecast"></div>
+        <ul class="forecast"></ul>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
