--- a/index.html
+++ b/index.html
@@ -24,22 +24,14 @@
     </form>
 
     <aside class="previous">
-        <!-- <ul style="list-style-type: none;"> -->
-        <!-- <li class="list" id="0">search 1</li>
-        <li class="list" id="1">search 2</li>
-        <li class="list" id="2">search 3</li>
-        <li class="list" id="3">search 4</li>
-        <li class="list" id="4">search 5</li> -->
-        <!-- </ul> -->
     </aside>
 
     <div class="container">
         <div class="current"></div>
-
     </div>
 
     <div class="container">
-        <ul class="forecast"></ul>
+        <div class="forecast"></div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
