fixed validation error

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <form class="form">
-        <label for="search">Search for City:</label><br>
+        <label for="city">Search for City:</label><br>
         <span id="error"></span><br>
         <input type="text" name="city" id="city">
         <button class="btn" id="btn">GO</button>
